--- a/src/app/index.html
+++ b/src/app/index.html
@@ -12,12 +12,13 @@
 
 <body class="container-fluid h-100">
 	<div class="row h-100">
+		<!-- Left Menu -->
 		<div class="panel col-2 h-100">
 			<div class="d-grid gap-2 my-4">
 				<img src="img/logo.png" class="img-fluid">
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmWallets_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#key"/>
 					</svg>
@@ -25,7 +26,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmAccounts_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#collection"/>
 					</svg>
@@ -33,7 +34,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmSend_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right"/>
 					</svg>
@@ -41,7 +42,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmReceive_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left"/>
 					</svg>
@@ -49,7 +50,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmDigiAssets_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiasset"/>
 					</svg>
@@ -57,7 +58,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmDigiID_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiid"/>
 					</svg>
@@ -65,7 +66,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmEducation_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#mortarboard"/>
 					</svg>
@@ -73,7 +74,7 @@
 				</button>
 			</div>
 			<div class="d-grid gap-2 mb-3">
-				<button class="btn btn-dgb btn-lg text-start">
+				<button class="btn btn-dgb btn-lg text-start" onclick="frmSoftware_Load()">
 					<svg class="bi" width="18" height="18">
 						<use xlink:href="vendor/bootstrap-icons.svg#code"/>
 					</svg>
@@ -81,7 +82,10 @@
 				</button>
 			</div>
 		</div>
+
+		<!-- Right Panel -->
 		<div class="col-10 h-100">
+			<!-- Top bar -->
 			<div class="text-end m-3">
 				<button class="btn btn-dgb btn-lg">
 					<svg class="bi" width="18" height="18">
@@ -89,203 +93,316 @@
 					</svg>
 				</button>
 			</div>
-			<div class="m-3">
+
+			<!-- Forms -->
+			<div class="m-3" id="frmWallets" hidden>
 				<h1 class="p-4 text-center">
 					DigiByte Wallets
 				</h1>
+
 				<div class="row p-4">
-					<div class="col-3">
+					<div class="col-4">
 						Name
 					</div>
-					<div class="col-3">
+					<div class="col-4">
 						File
 					</div>
-					<div class="col-3">
+					<div class="col-4">
 						Type
 					</div>
-					<div class="col-3">
-						Created
-					</div>
 				</div>
-				<div class="option row p-4 mb-3">
-					<div class="col-3">
-						Renzo's Wallet
-					</div>
-					<div class="col-3">
-						renzo.dgb
-					</div>
-					<div class="col-3">
-						24-word-mnemonic
-					</div>
-					<div class="col-3">
-						2023-08-09
-					</div>
+
+				<div id="plWallets">
+					
 				</div>
-				<div class="option row p-4 mb-3">
-					<div class="col-3">
-						digiassetX account
-					</div>
-					<div class="col-3">
-						digiassetx.dgb
-					</div>
-					<div class="col-3">
-						private-keys
-					</div>
-					<div class="col-3">
-						2021-12-15
-					</div>
-				</div>
+				
 				<hr>
+
 				<div class="row">
 					<div class="col-6">
-						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#mdlKeys">
+						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#mdlGenerateKeys">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat"/>
 							</svg> Generate
 						</div>
 					</div>
 					<div class="col-6">
-						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#mdlKeys">
+						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#mdlImportKeys">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right"/>
 							</svg> Import
 						</div>
 					</div>
 				</div>
-			</div>
-		</div>
-	</div>
 
-	<div class="modal fade" id="mdlKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
-		<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
-			<div class="modal-content">
-				<div class="mt-4">
-					<h5 class="text-center">
-						Manage Keys
-					</h5>
-					<div class="text-center">
-						<button type="button" class="btn btn-dgb btn-sm">
-							<svg class="bi" width="18" height="18">
-								<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat"/>
-							</svg> Generate
-						</button>
-	
-						<button type="button" class="btn btn-dgb btn-sm">
-							<svg class="bi" width="18" height="18">
-								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right"/>
-							</svg> Import
-						</button>
-
-						<button type="button" class="btn btn-dgb btn-sm" data-bs-dismiss="modal">
-							<svg class="bi" width="18" height="18">
-								<use xlink:href="vendor/bootstrap-icons.svg#x"/>
-							</svg> Close
-						</button>
+				<div class="modal fade" id="mdlGenerateKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="mt-4">
+								<h5 class="text-center">
+									Manage Keys
+								</h5>
+								<div class="text-center">
+									<button type="button" class="btn btn-dgb btn-sm">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat"/>
+										</svg> Generate
+									</button>
+				
+									<button type="button" class="btn btn-dgb btn-sm">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right"/>
+										</svg> Import
+									</button>
+			
+									<button type="button" class="btn btn-dgb btn-sm" data-bs-dismiss="modal">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x"/>
+										</svg> Close
+									</button>
+								</div>
+							</div>
+				
+							<div class="m-4" hidden>
+								<div class="mb-3">
+									<label>Key's type:</label>
+									<select class="form-select">
+										<option selected>Select key type</option>
+										<option>24-word Mnemonic</option>
+										<option>12-word Mnemonic</option>
+									</select>
+								</div>
+								<div class="mb-3">
+									<label>Name:</label>
+									<input type="text" class="form-control">
+								</div>
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm">
+										<i class="bi bi-check"></i> Create
+									</button>
+								</div>
+							</div>
+							<div class="m-4">
+								<div class="mb-3">
+									<label>Key's type:</label>
+									<select class="form-select">
+										<option selected>Select key type</option>
+										<option>Keys File (.dgb)</option>
+										<option>Mnemonic Phrase</option>
+										<option>Private Keys</option>
+									</select>
+								</div>
+				
+								<div class="mb-3">
+									<label>Select file:</label>
+									<input type="file" class="form-control">
+								</div>
+								<div class="mb-3" hidden>
+									<label>Insert mnemonic:</label>
+									<textarea class="form-control" rows="3"></textarea>
+								</div>
+								<div class="mb-3" hidden>
+									<label>Insert private keys (spaced):</label>
+									<textarea class="form-control" rows="3"></textarea>
+								</div>
+				
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm">
+										<i class="bi bi-check"></i> Import
+									</button>
+								</div>
+							</div>
+							<div class="m-4" hidden>
+								<div class="mb-3">
+									<label>Select keys:</label>
+									<select class="form-select">
+										<option selected>Select keys</option>
+										<option>renzo</option>
+										<option>sergio</option>
+										<option>digiassetX</option>
+										<option>friends</option>
+									</select>
+								</div>
+				
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-danger btn-sm">
+										<i class="bi bi-check"></i> Export
+									</button>
+								</div>
+							</div>
+				
+							<div class="m-4" hidden>
+								<div class="mb-3">
+									<label>Password:</label>
+									<input type="password" class="form-control">
+								</div>
+								<div class="mb-3">
+									<label>Confirm password:</label>
+									<input type="password" class="form-control">
+								</div>
+				
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm">
+										<i class="bi bi-check"></i> Finish
+									</button>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
-	
-				<div class="m-4" hidden>
-					<div class="mb-3">
-						<label>Key's type:</label>
-						<select class="form-select">
-							<option selected>Select key type</option>
-							<option>24-word Mnemonic</option>
-							<option>12-word Mnemonic</option>
-						</select>
-					</div>
-					<div class="mb-3">
-						<label>Name:</label>
-						<input type="text" class="form-control">
-					</div>
-					<div class="mb-3">
-						<label class="error">
-							Mistake template
-						</label>
-					</div>
-					<div class="text-center">
-						<button class="btn btn-success btn-sm">
-							<i class="bi bi-check"></i> Create
-						</button>
-					</div>
-				</div>
-				<div class="m-4">
-					<div class="mb-3">
-						<label>Key's type:</label>
-						<select class="form-select">
-							<option selected>Select key type</option>
-							<option>Keys File (.dgb)</option>
-							<option>Mnemonic Phrase</option>
-							<option>Private Keys</option>
-						</select>
-					</div>
-	
-					<div class="mb-3">
-						<label>Select file:</label>
-						<input type="file" class="form-control">
-					</div>
-					<div class="mb-3" hidden>
-						<label>Insert mnemonic:</label>
-						<textarea class="form-control" rows="3"></textarea>
-					</div>
-					<div class="mb-3" hidden>
-						<label>Insert private keys (spaced):</label>
-						<textarea class="form-control" rows="3"></textarea>
-					</div>
-	
-					<div class="mb-3">
-						<label class="error">
-							Mistake template
-						</label>
-					</div>
-					<div class="text-center">
-						<button class="btn btn-success btn-sm">
-							<i class="bi bi-check"></i> Import
-						</button>
-					</div>
-				</div>
-				<div class="m-4" hidden>
-					<div class="mb-3">
-						<label>Select keys:</label>
-						<select class="form-select">
-							<option selected>Select keys</option>
-							<option>renzo</option>
-							<option>sergio</option>
-							<option>digiassetX</option>
-							<option>friends</option>
-						</select>
-					</div>
-	
-					<div class="mb-3">
-						<label class="error">
-							Mistake template
-						</label>
-					</div>
-					<div class="text-center">
-						<button class="btn btn-danger btn-sm">
-							<i class="bi bi-check"></i> Export
-						</button>
-					</div>
-				</div>
-	
-				<div class="m-4" hidden>
-					<div class="mb-3">
-						<label>Password:</label>
-						<input type="password" class="form-control">
-					</div>
-					<div class="mb-3">
-						<label>Confirm password:</label>
-						<input type="password" class="form-control">
-					</div>
-	
-					<div class="mb-3">
-						<label class="error">
-							Mistake template
-						</label>
-					</div>
-					<div class="text-center">
-						<button class="btn btn-success btn-sm">
-							<i class="bi bi-check"></i> Finish
-						</button>
+				<div class="modal fade" id="mdlImportKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="mt-4">
+								<h5 class="text-center">
+									Manage Keys
+								</h5>
+								<div class="text-center">
+									<button type="button" class="btn btn-dgb btn-sm">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat"/>
+										</svg> Generate
+									</button>
+				
+									<button type="button" class="btn btn-dgb btn-sm">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right"/>
+										</svg> Import
+									</button>
+			
+									<button type="button" class="btn btn-dgb btn-sm" data-bs-dismiss="modal">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x"/>
+										</svg> Close
+									</button>
+								</div>
+							</div>
+				
+							<div class="m-4" hidden>
+								<div class="mb-3">
+									<label>Key's type:</label>
+									<select class="form-select">
+										<option selected>Select key type</option>
+										<option>24-word Mnemonic</option>
+										<option>12-word Mnemonic</option>
+									</select>
+								</div>
+								<div class="mb-3">
+									<label>Name:</label>
+									<input type="text" class="form-control">
+								</div>
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm">
+										<i class="bi bi-check"></i> Create
+									</button>
+								</div>
+							</div>
+							<div class="m-4">
+								<div class="mb-3">
+									<label>Key's type:</label>
+									<select class="form-select">
+										<option selected>Select key type</option>
+										<option>Keys File (.dgb)</option>
+										<option>Mnemonic Phrase</option>
+										<option>Private Keys</option>
+									</select>
+								</div>
+				
+								<div class="mb-3">
+									<label>Select file:</label>
+									<input type="file" class="form-control">
+								</div>
+								<div class="mb-3" hidden>
+									<label>Insert mnemonic:</label>
+									<textarea class="form-control" rows="3"></textarea>
+								</div>
+								<div class="mb-3" hidden>
+									<label>Insert private keys (spaced):</label>
+									<textarea class="form-control" rows="3"></textarea>
+								</div>
+				
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm">
+										<i class="bi bi-check"></i> Import
+									</button>
+								</div>
+							</div>
+							<div class="m-4" hidden>
+								<div class="mb-3">
+									<label>Select keys:</label>
+									<select class="form-select">
+										<option selected>Select keys</option>
+										<option>renzo</option>
+										<option>sergio</option>
+										<option>digiassetX</option>
+										<option>friends</option>
+									</select>
+								</div>
+				
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-danger btn-sm">
+										<i class="bi bi-check"></i> Export
+									</button>
+								</div>
+							</div>
+				
+							<div class="m-4" hidden>
+								<div class="mb-3">
+									<label>Password:</label>
+									<input type="password" class="form-control">
+								</div>
+								<div class="mb-3">
+									<label>Confirm password:</label>
+									<input type="password" class="form-control">
+								</div>
+				
+								<div class="mb-3">
+									<label class="error">
+										Mistake template
+									</label>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm">
+										<i class="bi bi-check"></i> Finish
+									</button>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -293,6 +410,9 @@
 	</div>
 
 	<script src="vendor/bootstrap.js"></script>
+	<script src="js/bridge.js"></script>
+	<script src="js/forms.js"></script>
+	<script src="js/frmWallets.js"></script>
 </body>
 
 </html>
