--- a/src/app/index.html
+++ b/src/app/index.html
@@ -120,7 +120,7 @@
 
 				<div class="row">
 					<div class="col-6">
-						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#mdlGenerateKeys">
+						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#generateKeys" onclick="frmWallets_Generate()">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat"/>
 							</svg> Generate
@@ -135,135 +135,74 @@
 					</div>
 				</div>
 
-				<div class="modal fade" id="mdlGenerateKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+				<div class="modal fade" id="generateKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 						<div class="modal-content">
 							<div class="mt-4">
 								<h5 class="text-center">
-									Manage Keys
+									Generate Keys
 								</h5>
-								<div class="text-center">
-									<button type="button" class="btn btn-dgb btn-sm">
-										<svg class="bi" width="18" height="18">
-											<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat"/>
-										</svg> Generate
-									</button>
-				
-									<button type="button" class="btn btn-dgb btn-sm">
-										<svg class="bi" width="18" height="18">
-											<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right"/>
-										</svg> Import
-									</button>
-			
-									<button type="button" class="btn btn-dgb btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
-											<use xlink:href="vendor/bootstrap-icons.svg#x"/>
-										</svg> Close
-									</button>
-								</div>
 							</div>
 				
-							<div class="m-4" hidden>
+							<div class="m-4" id="generateKeys1">
 								<div class="mb-3">
 									<label>Key's type:</label>
-									<select class="form-select">
-										<option selected>Select key type</option>
-										<option>24-word Mnemonic</option>
-										<option>12-word Mnemonic</option>
+									<select class="form-select" id="generateKeys1Type">
+										<option value="null" selected disabled>Select key type</option>
+										<option value="24-words">24-words Mnemonic</option>
+										<option value="12-words">12-words Mnemonic</option>
 									</select>
 								</div>
 								<div class="mb-3">
 									<label>Name:</label>
-									<input type="text" class="form-control">
+									<input type="text" class="form-control" id="generateKeys1Name">
 								</div>
 								<div class="mb-3">
-									<label class="error">
+									<label class="error" id="generateKeys1Error">
 										Mistake template
 									</label>
 								</div>
 								<div class="text-center">
-									<button class="btn btn-success btn-sm">
-										<i class="bi bi-check"></i> Create
+									<button class="btn btn-success btn-sm" onclick="frmWallets_Generate1()">
+										Continue
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+										Cancel
 									</button>
 								</div>
 							</div>
-							<div class="m-4">
-								<div class="mb-3">
-									<label>Key's type:</label>
-									<select class="form-select">
-										<option selected>Select key type</option>
-										<option>Keys File (.dgb)</option>
-										<option>Mnemonic Phrase</option>
-										<option>Private Keys</option>
-									</select>
-								</div>
-				
-								<div class="mb-3">
-									<label>Select file:</label>
-									<input type="file" class="form-control">
-								</div>
-								<div class="mb-3" hidden>
-									<label>Insert mnemonic:</label>
-									<textarea class="form-control" rows="3"></textarea>
-								</div>
-								<div class="mb-3" hidden>
-									<label>Insert private keys (spaced):</label>
-									<textarea class="form-control" rows="3"></textarea>
-								</div>
-				
-								<div class="mb-3">
-									<label class="error">
-										Mistake template
-									</label>
-								</div>
-								<div class="text-center">
-									<button class="btn btn-success btn-sm">
-										<i class="bi bi-check"></i> Import
-									</button>
-								</div>
-							</div>
-							<div class="m-4" hidden>
-								<div class="mb-3">
-									<label>Select keys:</label>
-									<select class="form-select">
-										<option selected>Select keys</option>
-										<option>renzo</option>
-										<option>sergio</option>
-										<option>digiassetX</option>
-										<option>friends</option>
-									</select>
-								</div>
-				
-								<div class="mb-3">
-									<label class="error">
-										Mistake template
-									</label>
-								</div>
-								<div class="text-center">
-									<button class="btn btn-danger btn-sm">
-										<i class="bi bi-check"></i> Export
-									</button>
-								</div>
-							</div>
-				
-							<div class="m-4" hidden>
+							<div class="m-4" id="generateKeys2">
 								<div class="mb-3">
 									<label>Password:</label>
-									<input type="password" class="form-control">
+									<input type="password" class="form-control" id="generateKeys2Password1">
 								</div>
 								<div class="mb-3">
 									<label>Confirm password:</label>
-									<input type="password" class="form-control">
+									<input type="password" class="form-control" id="generateKeys2Password2">
 								</div>
 				
 								<div class="mb-3">
-									<label class="error">
+									<label class="error" id="generateKeys2Error">
 										Mistake template
 									</label>
 								</div>
 								<div class="text-center">
-									<button class="btn btn-success btn-sm">
+									<button class="btn btn-success btn-sm" onclick="frmWallets_Generate2()">
 										<i class="bi bi-check"></i> Finish
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+										Cancel
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="generateKeys3">
+								<div id="generateKeys3List">
+
+								</div>
+								
+								<div class="text-center">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Generate3()">
+										Close
 									</button>
 								</div>
 							</div>
