--- a/src/app/index.html
+++ b/src/app/index.html
@@ -130,7 +130,7 @@
 						</div>
 					</div>
 					<div class="col-6">
-						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#mdlImportKeys">
+						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#importKeys" onclick="frmWallets_Import()">
 							<svg class="bi" width="18" height="18">
 								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right" />
 							</svg> Import
@@ -160,10 +160,10 @@
 									<label>Name:</label>
 									<input type="text" class="form-control" id="generateKeys1Name">
 								</div>
-								<div class="mb-3">
-									<label id="generateKeys1Error">
+								<div class="mb-3 text-center">
+									<span id="generateKeys1Error">
 										Mistake template
-									</label>
+									</span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Generate1()">
@@ -188,10 +188,10 @@
 									<input type="password" class="form-control" id="generateKeys2Password2">
 								</div>
 
-								<div class="mb-3">
-									<label id="generateKeys2Error">
+								<div class="mb-3 text-center">
+									<span id="generateKeys2Error">
 										Mistake template
-									</label>
+									</span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Generate2()">
@@ -213,6 +213,174 @@
 
 								<div class="text-center">
 									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Generate3()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="modal fade" id="importKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="mt-4">
+								<h5 class="text-center">
+									Import Keys
+								</h5>
+							</div>
+
+							<div class="m-4" id="importKeys1">
+								<div class="mb-3">
+									<label>Key's type:</label>
+									<select class="form-select" id="importKeys1Type">
+										<option value="null" selected disabled>Select key type</option>
+										<option value="mnemonic">Mnemonic Phrase</option>
+										<option value="keys" disabled>Private Keys</option>
+									</select>
+								</div>
+								<div class="mb-3">
+									<label>Name:</label>
+									<input type="text" class="form-control" id="importKeys1Name">
+								</div>
+								<div class="mb-3 text-center">
+									<span id="importKeys1Error">
+										Mistake template
+									</span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="frmWallets_Import1()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
+										</svg> Continue
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Cancel
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="importKeys2Mnemonic" hidden>
+								<span>Mnemonic: </span>
+								<div class="mb-3">
+									<label class="font-monospace" id="importKeys2MnemonicPhrase"></label>
+								</div>
+								<hr>
+								<div class="mb-3">
+									<span>Input: </span>
+									<span class="font-monospace" id="importKeys2MnemonicGuess"></span>
+									<div class="input-group input-group-sm mb-3">
+										<label class="input-group-text">Word</label>
+										<input type="text" class="form-control col-8" id="importKeys2MnemonicWord" readonly>
+										<button class="btn btn-success" type="button" onclick="keyboardAccept()">
+											<svg class="bi" width="18" height="18">
+												<use xlink:href="vendor/bootstrap-icons.svg#caret-right-fill" />
+											</svg>
+										</button>
+									</div>
+								</div>
+								<div class="text-center font-monospace">
+									<div class="mb-2">
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">Q</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">W</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">E</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">R</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">T</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">Y</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">U</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">I</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">O</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">P</button>
+									</div>
+									<div class="mb-2">
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">A</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">S</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">D</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">F</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">G</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">H</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">J</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">K</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">L</button>
+									</div>
+									<div class="mb-2">
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">Z</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">X</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">C</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">V</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">B</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">N</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">M</button>
+										<button class="btn btn-sm btn-bg" onclick="keyboardDelete()">
+											<svg class="bi" width="18" height="18">
+												<use xlink:href="vendor/bootstrap-icons.svg#arrow-left-short" />
+											</svg>
+										</button>
+									</div>
+								</div>
+								<div class="mb-3">
+									<input class="form-check-input" type="checkbox" id="passphrase" onchange="importKeys2MnemonicBIP39Passphrase.hidden = !this.checked">
+									<label for="passphrase">BIP39 Passphrase</label>
+									<input type="text" class="form-control form-control-sm" id="importKeys2MnemonicBIP39Passphrase" placeholder="(optional)" hidden>
+								</div>
+								<div class="mb-3 text-center">
+									<span id="importKeys2MnemonicError">
+										Mistake template
+									</span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="frmWallets_Import2Mnemonic()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
+										</svg> Continue
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Cancel
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="importKeys2Keys" hidden></div>
+
+							<div class="m-4" id="importKeys3" hidden>
+								<div class="mb-3">
+									<label>Password:</label>
+									<input type="password" class="form-control" id="importKeys3Password1">
+								</div>
+								<div class="mb-3">
+									<label>Confirm password:</label>
+									<input type="password" class="form-control" id="importKeys3Password2">
+								</div>
+
+								<div class="mb-3 text-center">
+									<span id="importKeys3Error">
+										Mistake template
+									</span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="frmWallets_Import3()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
+										</svg> Finish
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Cancel
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="importKeys4" hidden>
+								<div id="importKeys4Message">
+
+								</div>
+
+								<div class="text-center">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Import4()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
