--- a/src/app/index.html
+++ b/src/app/index.html
@@ -222,7 +222,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="modal fade" id="importKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
 						<div class="modal-content">
@@ -238,7 +237,7 @@
 									<select class="form-select" id="importKeys1Type">
 										<option value="null" selected disabled>Select key type</option>
 										<option value="mnemonic">Mnemonic Phrase</option>
-										<option value="keys" disabled>Private Keys</option>
+										<option value="keys">Private Keys (WIF)</option>
 									</select>
 								</div>
 								<div class="mb-3">
@@ -263,7 +262,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="m-4" id="importKeys2Mnemonic" hidden>
+
+							<div class="m-4" id="importKeys2Mnemonic">
 								<span>Mnemonic: </span>
 								<div class="mb-3">
 									<label class="font-monospace" id="importKeys2MnemonicPhrase"></label>
@@ -344,9 +344,41 @@
 									</button>
 								</div>
 							</div>
-							<div class="m-4" id="importKeys2Keys" hidden></div>
+							<div class="m-4" id="importKeys2Keys">
 
-							<div class="m-4" id="importKeys3" hidden>
+								<div class="mb-3">
+									<label>Private Key (WIF):</label>
+									<div class="input-group">
+										<input type="text" class="form-control" id="importKeys2KeysKey">
+										<button class="btn btn-success" type="button" onclick="addPrivateKey()">
+											<svg class="bi" width="18" height="18">
+												<use xlink:href="vendor/bootstrap-icons.svg#plus-circle" />
+											</svg>
+										</button>
+									</div>
+								</div>
+								<ol class="mb-3 text-break font-monospace small" id="importKeys2KeysList">
+								</ol>
+								<div class="mb-3 text-center">
+									<span id="importKeys2KeysError">
+										Mistake template
+									</span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="frmWallets_Import2Keys()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
+										</svg> Continue
+									</button>
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Cancel
+									</button>
+								</div>
+							</div>
+
+							<div class="m-4" id="importKeys3">
 								<div class="mb-3">
 									<label>Password:</label>
 									<input type="password" class="form-control" id="importKeys3Password1">
@@ -374,7 +406,7 @@
 									</button>
 								</div>
 							</div>
-							<div class="m-4" id="importKeys4" hidden>
+							<div class="m-4" id="importKeys4">
 								<div id="importKeys4Message">
 
 								</div>
