Added delete key file

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmWallets_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#key" />
 					</svg>
 					Wallet
@@ -27,7 +27,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmAccounts_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#collection" />
 					</svg>
 					Accounts
@@ -35,7 +35,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmSend_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
 					</svg>
 					Send
@@ -43,7 +43,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmReceive_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left" />
 					</svg>
 					Receive
@@ -51,7 +51,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmDigiAssets_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiasset" />
 					</svg>
 					DigiAssets
@@ -59,7 +59,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmDigiID_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#digiid" />
 					</svg>
 					Digi-ID
@@ -67,7 +67,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmEducation_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#mortarboard" />
 					</svg>
 					Education
@@ -75,7 +75,7 @@
 			</div>
 			<div class="d-grid gap-2 mb-3">
 				<button class="btn btn-dgb btn-lg text-start" onclick="frmSoftware_Load()">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#code" />
 					</svg>
 					Software
@@ -88,7 +88,7 @@
 			<!-- Top bar -->
 			<div class="text-end m-3">
 				<button class="btn btn-dgb btn-lg">
-					<svg class="bi bi-btn" width="18" height="18">
+					<svg class="bi bi-btn" width="15" height="15">
 						<use xlink:href="vendor/bootstrap-icons.svg#gear" />
 					</svg>
 				</button>
@@ -102,17 +102,17 @@
 
 				<div class="row p-5">
 					<div class="col-4">
-						<svg class="bi" width="18" height="18">
+						<svg class="bi" width="15" height="15">
 							<use xlink:href="vendor/bootstrap-icons.svg#file-earmark-binary" />
 						</svg> File
 					</div>
 					<div class="col-4">
-						<svg class="bi" width="18" height="18">
+						<svg class="bi" width="15" height="15">
 							<use xlink:href="vendor/bootstrap-icons.svg#key" />
 						</svg> Type
 					</div>
 					<div class="col-4">
-						<svg class="bi" width="18" height="18">
+						<svg class="bi" width="15" height="15">
 							<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
 						</svg> Integrity
 					</div>
@@ -124,14 +124,14 @@
 				<div class="row">
 					<div class="col-6">
 						<div class="option text-center p-4 me-1" data-bs-toggle="modal" data-bs-target="#generateKeys" onclick="frmWallets_Generate()">
-							<svg class="bi" width="18" height="18">
+							<svg class="bi" width="15" height="15">
 								<use xlink:href="vendor/bootstrap-icons.svg#arrow-repeat" />
 							</svg> Generate
 						</div>
 					</div>
 					<div class="col-6">
 						<div class="option text-center p-4 ms-1" data-bs-toggle="modal" data-bs-target="#importKeys" onclick="frmWallets_Import()">
-							<svg class="bi" width="18" height="18">
+							<svg class="bi" width="15" height="15">
 								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-right" />
 							</svg> Import
 						</div>
@@ -167,12 +167,12 @@
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Generate1()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
 									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
 									</button>
@@ -195,12 +195,12 @@
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Generate2()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
 										</svg> Finish
 									</button>
 									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
 									</button>
@@ -213,7 +213,7 @@
 
 								<div class="text-center">
 									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Generate3()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
 									</button>
@@ -251,12 +251,12 @@
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Import1()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
 									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
 									</button>
@@ -276,7 +276,7 @@
 										<label class="input-group-text">Word</label>
 										<input type="text" class="form-control col-8" id="importKeys2MnemonicWord" readonly>
 										<button class="btn btn-success" type="button" onclick="keyboardAccept()">
-											<svg class="bi" width="18" height="18">
+											<svg class="bi" width="15" height="15">
 												<use xlink:href="vendor/bootstrap-icons.svg#caret-right-fill" />
 											</svg>
 										</button>
@@ -315,7 +315,7 @@
 										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">N</button>
 										<button class="btn btn-sm btn-bg" onclick="keyboardClick(this)">M</button>
 										<button class="btn btn-sm btn-bg" onclick="keyboardDelete()">
-											<svg class="bi" width="18" height="18">
+											<svg class="bi" width="15" height="15">
 												<use xlink:href="vendor/bootstrap-icons.svg#arrow-left-short" />
 											</svg>
 										</button>
@@ -333,12 +333,12 @@
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Import2Mnemonic()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
 									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
 									</button>
@@ -351,7 +351,7 @@
 									<div class="input-group">
 										<input type="text" class="form-control" id="importKeys2KeysKey">
 										<button class="btn btn-success" type="button" onclick="addPrivateKey()">
-											<svg class="bi" width="18" height="18">
+											<svg class="bi" width="15" height="15">
 												<use xlink:href="vendor/bootstrap-icons.svg#plus-circle" />
 											</svg>
 										</button>
@@ -366,12 +366,12 @@
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Import2Keys()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
 									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
 									</button>
@@ -395,12 +395,12 @@
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="frmWallets_Import3()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
 										</svg> Finish
 									</button>
 									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
 									</button>
@@ -413,7 +413,62 @@
 
 								<div class="text-center">
 									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Import4()">
-										<svg class="bi" width="18" height="18">
+										<svg class="bi" width="15" height="15">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="modal fade" id="manageKeys" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
+					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+						<div class="modal-content">
+							<div class="mt-4">
+								<h5 class="text-center">
+									Manage Keys
+								</h5>
+							</div>
+
+							<div class="m-4" id="manageKeys1">
+								<div class="mb-3">
+									<div class="input-group mb-3">
+										<span class="input-group-text">Wallet File:</span>
+										<input type="text" class="form-control" id="manageKeys1Wallet" readonly>
+									</div>
+								</div>
+								<div class="text-center mb-3">
+									<button type="button" class="btn btn-primary btn-sm">
+										<svg class="bi" width="15" height="15">
+											<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
+										</svg> Export
+									</button>
+									<button type="button" class="btn btn-danger btn-sm" onclick="frmWallets_Manage1Delete()">
+										<svg class="bi" width="15" height="15">
+											<use xlink:href="vendor/bootstrap-icons.svg#trash" />
+										</svg> Delete
+									</button>
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Manage1Close()">
+										<svg class="bi" width="15" height="15">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="manageKeys2">
+								<div class="text-center mb-3">
+									Are you sure you want to delete this key file?<br>
+									(This can't be undone)
+								</div>
+								<div class="text-center mb-3">
+									<button type="button" class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Manage1DeleteConfirm()">
+										<svg class="bi" width="15" height="15">
+											<use xlink:href="vendor/bootstrap-icons.svg#trash" />
+										</svg> Delete
+									</button>
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="frmWallets_Manage1Close()">
+										<svg class="bi" width="15" height="15">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
 									</button>
