--- a/src/app/index.html
+++ b/src/app/index.html
@@ -158,9 +158,7 @@
 									<input type="text" class="form-control" id="generateKeys1Name">
 								</div>
 								<div class="mb-3 text-center">
-									<span id="generateKeys1Error">
-										Mistake template
-									</span>
+									<span id="generateKeys1Error"></span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="generateKeys1_Continue()">
@@ -168,7 +166,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="generateKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
@@ -186,9 +184,7 @@
 								</div>
 
 								<div class="mb-3 text-center">
-									<span id="generateKeys2Error">
-										Mistake template
-									</span>
+									<span id="generateKeys2Error"></span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="generateKeys2_Generate()">
@@ -196,7 +192,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
 										</svg> Generate
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="generateKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
@@ -204,11 +200,9 @@
 								</div>
 							</div>
 							<div class="m-4" id="generateKeys3">
-								<div id="generateKeys3List">
-
-								</div>
+								<div id="generateKeys3List"></div>
 								<div class="text-center">
-									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="generateKeys3_Close()">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="generateKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
@@ -241,9 +235,7 @@
 									<input type="text" class="form-control" id="importKeys1Name">
 								</div>
 								<div class="mb-3 text-center">
-									<span id="importKeys1Error">
-										Mistake template
-									</span>
+									<span id="importKeys1Error"></span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="importKeys1_Continue()">
@@ -251,7 +243,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="importKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
@@ -322,9 +314,7 @@
 									<input type="text" class="form-control form-control-sm" id="importKeys2MnemonicBIP39Passphrase" placeholder="(optional)" hidden>
 								</div>
 								<div class="mb-3 text-center">
-									<span id="importKeys2MnemonicError">
-										Mistake template
-									</span>
+									<span id="importKeys2MnemonicError"></span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="importKeys2Mnemonic_Continue()">
@@ -332,7 +322,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="importKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
@@ -354,9 +344,7 @@
 								<ol class="mb-3 text-break font-monospace small" id="importKeys2KeysList">
 								</ol>
 								<div class="mb-3 text-center">
-									<span id="importKeys2KeysError">
-										Mistake template
-									</span>
+									<span id="importKeys2KeysError"></span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="importKeys2Keys_Continue()">
@@ -364,7 +352,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="importKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
@@ -382,9 +370,7 @@
 								</div>
 
 								<div class="mb-3 text-center">
-									<span id="importKeys3Error">
-										Mistake template
-									</span>
+									<span id="importKeys3Error"></span>
 								</div>
 								<div class="text-center">
 									<button class="btn btn-success btn-sm" onclick="importKeys3_Save()">
@@ -392,7 +378,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#check-circle" />
 										</svg> Save
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal">
+									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="importKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Cancel
@@ -400,11 +386,9 @@
 								</div>
 							</div>
 							<div class="m-4" id="importKeys4">
-								<div id="importKeys4Message">
-
-								</div>
+								<div id="importKeys4Message"></div>
 								<div class="text-center">
-									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="importKeys4_Close()">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="importKeys_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
@@ -440,7 +424,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#trash" />
 										</svg> Delete
 									</button>
-									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="manageKeys1_Close()">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="manageKey_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
@@ -458,7 +442,7 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#trash" />
 										</svg> Delete
 									</button>
-									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="manageKeys1_Close()">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="manageKey_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
@@ -466,11 +450,9 @@
 								</div>
 							</div>
 							<div class="m-4" id="manageKeys3">
-								<div class="text-center mb-3" id="manageKeys3Status">
-
-								</div>
+								<div class="text-center mb-3" id="manageKeys3Status"></div>
 								<div class="text-center mb-3">
-									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="manageKeys1_Close()">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="manageKey_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
 										</svg> Close
