Updated unique id

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -409,6 +409,7 @@
 								<div class="mb-3">
 									<div class="input-group mb-3">
 										<span class="input-group-text">Key File:</span>
+										<input type="hidden" id="manageKeys1ID">
 										<input type="text" class="form-control" id="manageKeys1Name" readonly>
 									</div>
 								</div>
