--- a/src/app/index.html
+++ b/src/app/index.html
@@ -504,7 +504,7 @@
 						</div>
 					</div>
 				</div>
-				
+
 				<!-- Modals -->
 				<div class="modal fade" id="addAccount" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1">
 					<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
@@ -534,12 +534,85 @@
 											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
 										</svg> Continue
 									</button>
-									<button class="btn btn-danger btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
 										<svg class="bi" width="18" height="18">
 											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
-										</svg> Cancel
+										</svg> Close
 									</button>
 								</div>
+							</div>
+							<div class="m-4" id="addAccount2">
+								<div class="mb-3">
+									<label>Account's Type:</label>
+									<select class="form-select" id="addAccount2Type" onchange="addAccount2TypeAddress.hidden = addAccount2Type.value != 'derived'">
+										<option value="null" selected disabled>Select account</option>
+									</select>
+								</div>
+								<div class="mb-3" id="addAccount2TypeAddress" hidden>
+									<label>Address Type:</label>
+									<div class="text-center">
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeLegacy" value="legacy">
+											<label class="form-check-label" for="addAccount2TypeLegacy">Legacy</label>
+										</div>
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeCompatibility" value="compatibility">
+											<label class="form-check-label" for="addAccount2TypeCompatibility">Compatibility</label>
+										</div>
+										<div class="form-check form-check-inline">
+											<input class="form-check-input" type="radio" name="addAccount2TypeAddress" id="addAccount2TypeSegwit" value="segwit">
+											<label class="form-check-label" for="addAccount2TypeSegwit">Segwit</label>
+										</div>
+									</div>
+								</div>
+								<div class="mb-3">
+									<label>Key's Password:</label>
+									<input type="password" class="form-control" id="addAccount2Password">
+								</div>
+								<div class="mb-3 text-center">
+									<span id="addAccount2Error"></span>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-success btn-sm" onclick="addAccount2_Continue()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#arrow-right-circle" />
+										</svg> Continue
+									</button>
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="addAccount3">
+								<div class="mb-3" id="addAccount3Found"></div>
+								<div class="d-flex justify-content-center mb-3">
+									<div class="spinner-border mx-auto" id="addAccount3Spinner">
+									</div>
+								</div>
+								<div class="text-center">
+									<button class="btn btn-danger btn-sm" onclick="addAccount3_StopLooking()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-square" />
+										</svg> Stop Looking
+									</button>
+									<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
+										<svg class="bi" width="18" height="18">
+											<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+										</svg> Close
+									</button>
+								</div>
+							</div>
+							<div class="m-4" id="addAccount4">
+								<div class="mb-3 text-center">
+									<span id="addAccount4Message"></span>
+								</div>						
+								<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
+									<svg class="bi" width="18" height="18">
+										<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
+									</svg> Close
+								</button>
 							</div>
 						</div>
 					</div>
