--- a/src/app/index.html
+++ b/src/app/index.html
@@ -116,7 +116,7 @@
 						</svg> Information
 					</div>
 				</div>
-				<div class="window px-3" id="keysList">
+				<div class="list px-3" style="max-height: 45vh;" id="keysList">
 
 				</div>
 				<hr>
@@ -410,7 +410,7 @@
 							<div class="m-4" id="manageKeys1">
 								<div class="mb-3">
 									<div class="input-group mb-3">
-										<span class="input-group-text">Key File:</span>
+										<span class="input-group-text">Key:</span>
 										<input type="hidden" id="manageKeys1ID">
 										<input type="text" class="form-control" id="manageKeys1Name" readonly>
 									</div>
@@ -491,7 +491,7 @@
 						</svg> Value
 					</div>
 				</div>
-				<div class="window p-3" id="accountsList">
+				<div class="list px-3" style="max-height: 45vh;" id="accountsList">
 
 				</div>
 				<hr>
@@ -607,7 +607,7 @@
 							<div class="m-4" id="addAccount4">
 								<div class="mb-3 text-center">
 									<span id="addAccount4Message"></span>
-								</div>						
+								</div>
 								<button class="btn btn-secondary btn-sm" data-bs-dismiss="modal" onclick="addAccount_Clear()">
 									<svg class="bi" width="18" height="18">
 										<use xlink:href="vendor/bootstrap-icons.svg#x-circle" />
@@ -615,6 +615,113 @@
 								</button>
 							</div>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="m-3" id="frmAccount" hidden>
+				<h1 id="accountName">
+					Renzo's DGB Personal Account
+				</h1>
+
+				<div class="row p-4">
+					<div class="col-xxl-8 col-6">
+						<h2>169'735'665.28546325 DGB</h2>
+						<h4 style="color: #9A9A9A">$ 1'420'568.41</h4>
+					</div>
+					<div class="col-xxl-2 col-3 d-grid gap-2">
+						<button class="btn btn-dgb bg-dgb fs-4" id="accountSend">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up-right" />
+							</svg> Send
+						</button>
+					</div>
+					<div class="col-xxl-2 col-3 d-grid gap-2">
+						<button class="btn btn-dgb bg-dgb fs-4" id="accountReceive">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down-left" />
+							</svg> Receive
+						</button>
+					</div>
+				</div>
+
+				<div class="list px-3" style="max-height: 60vh;" id="transactionList">
+					<div class="mb-3">
+						Today - Dec. 06, 2023
+					</div>
+					<div class="option row p-4 mb-3" data-bs-toggle="modal" data-bs-target="#" onclick="">
+						<div class="col-1 icn-green">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down" />
+							</svg>
+						</div>
+						<div class="col-1">
+							13:24
+						</div>
+						<div class="col-5">D6zEnE3roe234dsK4Y8sqparzUnwRcJhmR</div>
+						<div class="col-5 text-end fw-bold" style="color:green">+ 12'332.949003</div>
+					</div>
+					<div class="option row p-4 mb-3" data-bs-toggle="modal" data-bs-target="#" onclick="">
+						<div class="col-1 icn-green">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-in-down" />
+							</svg>
+						</div>
+						<div class="col-1">
+							03:24
+						</div>
+						<div class="col-5">D6zEnE3roe234dsK4Y8sqparzUnwRcJhmR</div>
+						<div class="col-5 text-end fw-bold" style="color:green">+ 332.00000000</div>
+					</div>
+					<div class="mb-3">
+						Yesterday - Dec. 05, 2023
+					</div>
+					<div class="option row p-4 mb-3" data-bs-toggle="modal" data-bs-target="#" onclick="">
+						<div class="col-1 icn-green">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up" />
+							</svg>
+						</div>
+						<div class="col-1">
+							08:09
+						</div>
+						<div class="col-5">D6zEnE3roe234dsK4Y8sqparzUnwRcJhmR</div>
+						<div class="col-5 text-end fw-bold" style="color:red">- 94'299.930</div>
+					</div>
+					<div class="option row p-4 mb-3" data-bs-toggle="modal" data-bs-target="#" onclick="">
+						<div class="col-1 icn-green">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up" />
+							</svg>
+						</div>
+						<div class="col-1">
+							08:09
+						</div>
+						<div class="col-5">D6zEnE3roe234dsK4Y8sqparzUnwRcJhmR</div>
+						<div class="col-5 text-end fw-bold" style="color:red">- 94'299.930</div>
+					</div>
+					<div class="option row p-4 mb-3" data-bs-toggle="modal" data-bs-target="#" onclick="">
+						<div class="col-1 icn-green">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up" />
+							</svg>
+						</div>
+						<div class="col-1">
+							08:09
+						</div>
+						<div class="col-5">D6zEnE3roe234dsK4Y8sqparzUnwRcJhmR</div>
+						<div class="col-5 text-end fw-bold" style="color:red">- 94'299.930</div>
+					</div>
+					<div class="option row p-4 mb-3" data-bs-toggle="modal" data-bs-target="#" onclick="">
+						<div class="col-1 icn-green">
+							<svg class="bi bi-btn" width="24" height="24">
+								<use xlink:href="vendor/bootstrap-icons.svg#box-arrow-up" />
+							</svg>
+						</div>
+						<div class="col-1">
+							08:09
+						</div>
+						<div class="col-5">D6zEnE3roe234dsK4Y8sqparzUnwRcJhmR</div>
+						<div class="col-5 text-end fw-bold" style="color:red">- 94'299.930</div>
 					</div>
 				</div>
 			</div>
